--- a/cineApp/ListagemFilme/Controllers/Cells/FilmeCollectionViewCell.xib
+++ b/cineApp/ListagemFilme/Controllers/Cells/FilmeCollectionViewCell.xib
@@ -29,7 +29,7 @@
                                     <constraint firstAttribute="height" constant="189" id="eDn-ON-903"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AIu-FH-32e">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="AIu-FH-32e">
                                 <rect key="frame" x="105.5" y="212" width="97" height="21.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <nil key="textColor"/>
