--- a/cineApp/Main/Base.lproj/Main.storyboard
+++ b/cineApp/Main/Base.lproj/Main.storyboard
@@ -36,6 +36,7 @@
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cinema-1" translatesAutoresizingMaskIntoConstraints="NO" id="fzd-ng-Syu">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.94999999999999996" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cineapp" translatesAutoresizingMaskIntoConstraints="NO" id="zre-zL-6rq">
                                 <rect key="frame" x="87" y="217" width="240" height="113"/>
